--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ highlighter: pygments # default python pygments have been replaced by pygments.r
 
 paginate: 5          # Posts per page on the blog index
 paginate_path: "posts/:num"  # Directory base for pagination URLs eg. /posts/2/
+recommend_posts: 8
 recent_posts: 8       # Posts in the sidebar Recent Posts section
 excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 excerpt_separator: "<!--more-->"
